k8s/simpleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
        - name: app
          image: almuko/simpleapp:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
  namespace: default
spec:
  selector:
    app: simpleapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: simpleapp.compnet.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpleapp
                port:
                  number: 80
